Revert "Add bottom padding to left column - Language section no longer stuck at bottom - Better spacing alignment with right column"
This reverts commit 83e33b2e138ee3c129ae170a6cfe3106c9c8458a.

--- a/cv-a4.css
+++ b/cv-a4.css
@@ -126,7 +126,6 @@ body {
 .left-column {
     background: var(--bg-light);
     padding: 30px 25px;
-    padding-bottom: 50px;
     border-right: 1px solid var(--border-color);
 }
 
